# lang

./: .gitignore
config/: __init__.py  env_utils.py
langchain/: 3.py
langgraph/: 4.py  5.py
langgraph/project/: main.py  pyproject.toml
langgraph/project/agents/: __init__.py  base_agent.py  researcher.py
langgraph/project/api/: middleware.py
langgraph/project/api/v1/: chat.py  router.py  voice.py
langgraph/project/data/: app.db
langgraph/project/db/: alembic.ini  import_models.py
langgraph/project/db/migrations/: env.py
langgraph/project/db/migrations/versions/: 2026_03_04_1728-b387ac7ea5d7_初始化.py
langgraph/project/db/repositories/: __init__.py  conversation_repo.py  memory_repo.py  message_repo.py
langgraph/project/graph/: state.py
langgraph/project/graph/edges/: __init__.py
langgraph/project/graph/nodes/: chat.py  memory_loader.py  memory_updater.py  rag_retriever.py  response_synthesizer.py  router.py  voice_processor.py
langgraph/project/graph/subgraphs/: rag_subgraph.py
langgraph/project/memory/: long_term.py  memory_chain.py  short_term.py
langgraph/project/rag/: embeddings.py
langgraph/project/schemas/: __init__.py  conversation.py  memory.py  voice.py
langgraph/project/services/: graph_service.py
langgraph/project/tools/memory_tools/: memory_store.py
langgraph/project/tools/rag_tools/: __init__.py  retriever.py
langgraph/project/tools/voice_tools/: __init__.py  noise_reduction.py  vad.py
langgraph/project/utils/: callbacks.py  exceptions.py
langgraph/project/voice/: __init__.py  stream_handler.py
test_use/: 1.py  (+2 more)
(+54 files in other folders)
