[project]
name = "langgraph-enterprise-voice"
version = "0.1.0"
description = "企业级 LangGraph 流式语音对话系统 - 集成RAG、多Agent协同、长期记忆"
requires-python = ">=3.10"
dependencies = [
    # === LangChain / LangGraph 核心 ===
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",

    # === Web 框架 ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # === 数据库 ===
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",           # 异步 SQLite (开发环境)
    "asyncpg>=0.30.0",             # 异步 PostgreSQL (生产环境)
    "alembic>=1.14.0",

    # === 数据验证 ===
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # === 向量数据库 / RAG ===
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",

    # === 语音处理 ===
    "openai-whisper>=20240930",     # STT
    "edge-tts>=6.1.0",             # TTS
    "webrtcvad>=2.0.10",           # VAD
    "noisereduce>=3.0.0",          # 降噪
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",

    # === 工具 ===
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
